@startuml
hide circle
skinparam linetype ortho

' =========================
' ENTIDADES
' =========================

entity User {
    +id_user : int <<PK>>
    name : varchar
    email : varchar
    password : varchar
    created_at : timestamp
    updated_at : timestamp
    deleted_at : timestamp
}

entity Role {
    +id_role : int <<PK>>
    name : varchar
}

entity Permission {
    +id_permission : int <<PK>>
    name : varchar
}

entity UserRole {
    +id_user : int <<FK>>
    +id_role : int <<FK>>
}

entity RolePermission {
    +id_role : int <<FK>>
    +id_permission : int <<FK>>
}

entity Category {
    +id_category : int <<PK>>
    name : varchar
}

entity Supplier {
    +id_supplier : int <<PK>>
    name : varchar
    contact : varchar
}

entity Service {
    +id_service : int <<PK>>
    name : varchar
    price : decimal
}

entity Product {
    +id_product : int <<PK>>
    name : varchar
    price : decimal
    stock : int
    id_category : int <<FK>>
    id_supplier : int <<FK>>
}

entity Reservation {
    +id_reservation : int <<PK>>
    date : date
    time : time
    status : varchar
    created_at : timestamp
    updated_at : timestamp
    deleted_at : timestamp
    id_user : int <<FK>>
    id_employee : int <<FK>>
    id_service : int <<FK>>
}

entity Sale {
    +id_sale : int <<PK>>
    date : date
    total : decimal
    id_user : int <<FK>>
    id_employee : int <<FK>>
    id_reservation : int <<FK>>
    created_at : timestamp
    updated_at : timestamp
    deleted_at : timestamp
}

entity SaleDetailProduct {
    +id_sale_detail_product : int <<PK>>
    id_sale : int <<FK>>
    id_product : int <<FK>>
    quantity : int
    unit_price : decimal
}

entity SaleDetailService {
    +id_sale_detail_service : int <<PK>>
    id_sale : int <<FK>>
    id_service : int <<FK>>
    quantity : int
    unit_price : decimal
}

' =========================
' RELACIONES
' =========================

User ||--o{ UserRole
Role ||--o{ UserRole

Role ||--o{ RolePermission
Permission ||--o{ RolePermission

User ||--o{ Sale : performs
User ||--o{ Reservation : schedules

User ||--o{ Sale : attends
User ||--o{ Reservation : attends

Category ||--o{ Product : classifies
Supplier ||--o{ Product : supplies

Sale ||--o{ SaleDetailProduct
Product ||--o{ SaleDetailProduct

Sale ||--o{ SaleDetailService
Service ||--o{ SaleDetailService

Service ||--o{ Reservation : booked

Reservation ||--o| Sale : generates

@enduml